--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 1em;
 }
 
-.App-link {
-  color: #09d3ac;
+.container {
+  width: 100%;
+  max-width: 600px;
+}
+
+.wrapper {
+  padding: 1em 0;
+}
+
+img {
+  width: 100%;
+}
+
+.thumb-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: blur(20px);
+  transform: scale(1.1);
+  transition: visibility 0ms ease 400ms;
+  visibility: visible;
+}
+
+.full-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 400ms ease 0ms;
+  background: white;
 }
